# PhysicalModeling

./: .gitignore  README.md  pyproject.toml
src/: DSP.py  Synthesis.py  Utils.py
