[project]
name = "physicalmodeling"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiroh", email = "hirohata0116@gmail.com" }
]
dependencies = [
    "mido>=1.3.2",
    "scipy>=1.10.1",
    "polars>=0.20.16",
    "numpy>=1.24.4",
    "soundfile>=0.12.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "physicalmodeling:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/physicalmodeling"]
